--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".MainActivity">
-        
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/messages_recycler"
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/linear_layout_element"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
-            tools:itemCount="4"
-            tools:listitem="@layout/message_list_item"/>
+            android:layout_above="@id/linear_layout_element">
+        
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/messages_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                tools:itemCount="4"
+                tools:listitem="@layout/message_list_item"/>
+
+            <TextView
+                android:id="@+id/message_empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:padding="16dp"
+                android:text="No messages yet"
+                android:textSize="24sp"
+                android:visibility="gone" />
+
+        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/linear_layout_element"
