--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,31 +40,31 @@
 
         </FrameLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/linear_layout_element"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:padding="16dp"
-            android:orientation="horizontal">
+            android:padding="16dp">
 
             <EditText
                 android:id="@+id/message_text"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Write your message here"
-                android:layout_marginEnd="30dp"
+                android:layout_toStartOf="@id/send_message_button"
                 />
 
             <ImageView
                 android:id="@+id/send_message_button"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_send_message"
-                android:layout_gravity="center_vertical"/>
+                android:layout_marginLeft="16dp"/>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
 
